#53 | Numeric data type issues are fixed. Added tola/Mohala field in activity entity.